[gd_scene load_steps=4 format=3 uid="uid://fxun8yhttruw"]

[ext_resource type="Script" path="res://script/pilih_level.gd" id="1_grbng"]
[ext_resource type="Texture2D" uid="uid://cf1de0hkgisdv" path="res://asset 9-11/bg biru.png" id="1_nst3f"]
[ext_resource type="Texture2D" uid="uid://mqc504oei5ti" path="res://scene/asset/button.png" id="2_5k5ad"]

[node name="PilihLevel" type="Node2D"]
script = ExtResource("1_grbng")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.213104, 0)
scale = Vector2(1.42621, 1.13615)
texture = ExtResource("1_nst3f")
offset = Vector2(196, 426)

[node name="level" type="Node2D" parent="."]
position = Vector2(274, 493)

[node name="surat" type="Sprite2D" parent="level"]

[node name="Button" type="Button" parent="level"]
visible = false
offset_left = -114.0
offset_top = -74.0
offset_right = 103.0
offset_bottom = 71.0

[node name="next_level" type="TextureButton" parent="."]
offset_left = 419.0
offset_top = 439.0
offset_right = 488.0
offset_bottom = 511.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("2_5k5ad")

[node name="previous_level" type="TextureButton" parent="."]
offset_left = -50.0
offset_top = 383.0
offset_right = 19.0
offset_bottom = 455.0
rotation = 3.14159
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(69.5908, 71.7678)
texture_normal = ExtResource("2_5k5ad")

[connection signal="pressed" from="level/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="next_level" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="previous_level" to="." method="_on_previous_level_pressed"]
